[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Font/Font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Scripts/Button.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 116
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 200
outline_color = Color( 0.87451, 0.0823529, 0.0823529, 1 )
font_data = ExtResource( 1 )

[node name="Menu" type="Node2D"]
position = Vector2( 2666, 1552 )

[node name="Continue" type="Button" parent="."]
margin_left = -409.0
margin_top = -787.0
margin_right = 368.0
margin_bottom = -531.0
custom_fonts/font = SubResource( 1 )
text = "Continue"
script = ExtResource( 2 )

[node name="Main Menu" type="Button" parent="."]
margin_left = -409.0
margin_top = -19.0
margin_right = 368.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 1 )
text = "Main Menu"
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -890.5
margin_top = -1574.0
margin_right = 849.5
margin_bottom = -882.0
custom_fonts/font = SubResource( 2 )
text = "Pause"
align = 1
valign = 1

[connection signal="pressed" from="Continue" to="Continue" method="_on_Continue_pressed"]
[connection signal="pressed" from="Main Menu" to="Main Menu" method="_on_Main_Menu_pressed"]
